--- a/package.json
+++ b/package.json
@@ -1,35 +1,23 @@
 {
   "name": "web322-app",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Shriman Dholu",
+  "author": "Vishesh Dineshbhai Patel",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "client-sessions": "^0.8.0",
-    "cloudinary": "^1.32.0",
+    "cloudinary": "^1.34.0",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
-    "handlebars": "^4.7.7",
-    "mongoose": "^6.10.5",
+    "express-handlebars": "^7.0.2",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.8.0",
+    "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.26.0",
+    "sequelize": "^6.30.0",
     "streamifier": "^0.1.1",
     "strip-js": "^1.2.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shriman1400/web322-app.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Shriman1400/web322-app/issues"
-  },
-  "homepage": "https://github.com/Shriman1400/web322-app#readme",
-  "description": ""
+  }
 }
